// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show task skip should not collapse skip message: 7IvF8C3RevPE0cdsG7QZonUN1JS26n0N-err 1`] = `[]`;

exports[`show task skip should not collapse skip message: 7IvF8C3RevPE0cdsG7QZonUN1JS26n0N-exit 1`] = `[]`;

exports[`show task skip should not collapse skip message: 7IvF8C3RevPE0cdsG7QZonUN1JS26n0N-out 1`] = `
[
  [
    "◼ This task will execute.
",
  ],
  [
    "[2K[1A[2K[G◼ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
⚠ This task will never execute.
  ↓ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[G",
  ],
  [
    "✔ This task will execute.
⚠ This task will never execute.
  ↓ This task will never execute.
",
  ],
]
`;

exports[`show task skip should show the original title of the task when skipped with empty message: 3n2w67J8KnAihH5KaGDGnHe2O9xawvnx-err 1`] = `[]`;

exports[`show task skip should show the original title of the task when skipped with empty message: 3n2w67J8KnAihH5KaGDGnHe2O9xawvnx-exit 1`] = `[]`;

exports[`show task skip should show the original title of the task when skipped with empty message: 3n2w67J8KnAihH5KaGDGnHe2O9xawvnx-out 1`] = `
[
  [
    "◼ This task will execute.
",
  ],
  [
    "[2K[1A[2K[G❯ This task will execute.
",
  ],
  [
    "[2K[1A[2K[G↓ This task will execute. [SKIPPED]
",
  ],
  [
    "[2K[1A[2K[G",
  ],
  [
    "↓ This task will execute. [SKIPPED]
",
  ],
]
`;

exports[`show task skip should show the original title of the task: c4Q9Hk2x725caX6F6qXGMgyUQh36HQls-err 1`] = `[]`;

exports[`show task skip should show the original title of the task: c4Q9Hk2x725caX6F6qXGMgyUQh36HQls-exit 1`] = `[]`;

exports[`show task skip should show the original title of the task: c4Q9Hk2x725caX6F6qXGMgyUQh36HQls-out 1`] = `
[
  [
    "◼ This task will execute.
",
  ],
  [
    "[2K[1A[2K[G❯ This task will execute.
",
  ],
  [
    "[2K[1A[2K[G↓ This task will execute. [SKIPPED]
",
  ],
  [
    "[2K[1A[2K[G",
  ],
  [
    "↓ This task will execute. [SKIPPED]
",
  ],
]
`;

exports[`show task skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-err 1`] = `[]`;

exports[`show task skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-exit 1`] = `[]`;

exports[`show task skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-out 1`] = `
[
  [
    "◼ This task will execute.
",
  ],
  [
    "[2K[1A[2K[G◼ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
↓ This task will never execute. [SKIPPED]
",
  ],
  [
    "[2K[1A[2K[1A[2K[G",
  ],
  [
    "✔ This task will execute.
↓ This task will never execute. [SKIPPED]
",
  ],
]
`;

exports[`show task skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-err 1`] = `[]`;

exports[`show task skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-exit 1`] = `[]`;

exports[`show task skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-out 1`] = `
[
  [
    "◼ This task will execute.
",
  ],
  [
    "[2K[1A[2K[G❯ This task will execute.
",
  ],
  [
    "[2K[1A[2K[G↓ This task will execute. [SKIPPED]
",
  ],
  [
    "[2K[1A[2K[G↓ I am skipping this tasks for reasons. [SKIPPED]
",
  ],
  [
    "[2K[1A[2K[G",
  ],
  [
    "↓ I am skipping this tasks for reasons. [SKIPPED]
",
  ],
]
`;

exports[`show task skip should skip without a suffix: omE6UjDQWFXPCa7F8rNE7ByEXsllnMAB-err 1`] = `[]`;

exports[`show task skip should skip without a suffix: omE6UjDQWFXPCa7F8rNE7ByEXsllnMAB-exit 1`] = `[]`;

exports[`show task skip should skip without a suffix: omE6UjDQWFXPCa7F8rNE7ByEXsllnMAB-out 1`] = `
[
  [
    "◼ This task will execute.
",
  ],
  [
    "[2K[1A[2K[G❯ This task will execute.
",
  ],
  [
    "[2K[1A[2K[G↓ This task will execute.
",
  ],
  [
    "[2K[1A[2K[G↓ I am skipping this tasks for reasons.
",
  ],
  [
    "[2K[1A[2K[G",
  ],
  [
    "↓ I am skipping this tasks for reasons.
",
  ],
]
`;

exports[`show task skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-err 1`] = `[]`;

exports[`show task skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-exit 1`] = `[]`;

exports[`show task skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-out 1`] = `
[
  [
    "◼ This task will execute.
",
  ],
  [
    "[2K[1A[2K[G◼ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
↓ I will be skipped! [SKIPPED]
",
  ],
  [
    "[2K[1A[2K[1A[2K[G",
  ],
  [
    "✔ This task will execute.
↓ I will be skipped! [SKIPPED]
",
  ],
]
`;